user-profile: Fix size, spacing and duplicate title

--- a/data/resources/style.css
+++ b/data/resources/style.css
@@ -346,6 +346,11 @@ crop-circle > .mask {
   border-radius: 9999px;
 }
 
+user-page scrolledwindow > viewport > clamp > box {
+  margin: 12px;
+  border-spacing: 24px;
+}
+
 
 /* Login */
 
